--- a/CadastroCidade.html
+++ b/CadastroCidade.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="CadastroCidade.php" method="post">
         <fieldset>
             <legend>Cadastro de Cidades</legend>
             <div>
