--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <h2>IFSP: </h2>
-    <button><a href="CadastroCidade.html">Cadastro de Cidades</a></button><br>
-    <button><a href="ListarCidade.php">Ver Lista de Cidades</a></button><br>
+    <div>
+        <h3>Cidades:</h3>
+        <button><a href="page cidade/CadastroCidade.html">Cadastro de Cidades</a></button><br>
+        <button><a href="page cidade/ListarCidade.php">Ver Lista de Cidades</a></button><br>
+    </div>
+    <div>
+        <h3>Alunos:</h3>
+        <button><a href="/page cidade/CadastroCidade.php">Cadastro de Cidades</a></button><br>
+        <button><a href="/page cidade/ListarCidade.php">Ver Lista de Cidades</a></button><br>
+    </div>
 </body>
 </html>
