--- a/page cliente/CadastrarCliente.html
+++ b/page cliente/CadastrarCliente.html
@@ -27,6 +27,6 @@
             </div>
         </fieldset>
     </form>
-    <button><a href="index.html">Voltar ao Menu</a></button><br>
+    <button><a href="../index.html">Voltar ao Menu</a></button><br>
 </body>
 </html>
