--- a/page cidade/CadastroCidade.html
+++ b/page cidade/CadastroCidade.html
@@ -1,10 +1,3 @@
-<?php
-    include('include/conexao.php');
-    $id = $_GET['id'];
-    $sql = "SELECT * FROM cidade WHERE id=$id";
-    $result = mysqli_query($con, $sql);
-    $row = mysqli_fetch_array($result);
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="AlterarCidadeExe.php" method="post">
+    <form action="CadastroCidade.php" method="post">
         <fieldset>
             <legend>Cadastro de Cidades</legend>
             <div>
                 <label for="nome">Nome</label>
-                <input type="text" name="nome" value="<?php echo $row['nome'] ?>">
+                <input type="text" name="nome" id="">
             </div>
             <div>
                 <label for="nome">Estado</label>
@@ -34,6 +27,6 @@
             </div>
         </fieldset>
     </form>
-    <button><a href="index.html">Voltar ao Menu</a></button><br>
+    <button><a href="../index.html">Voltar ao Menu</a></button><br>
 </body>
 </html>
