--- a/page cliente/CadastrarCliente.html
+++ b/page cliente/CadastrarCliente.html
@@ -20,6 +20,9 @@
                 <label for="">Senha: </label>
                 <input type="password" name="senha"><br>
 
+                <label for="">Codigo Cidade: </label>
+                <input type="text" name="id_cidade"><br>
+
                 <input type="hidden" name="ativo" value="1">
             </div>
                 
