--- a/page cidade/CadastroCidade.html
+++ b/page cidade/CadastroCidade.html
@@ -17,9 +17,9 @@
             <div>
                 <label for="nome">Estado</label>
                 <select name="estado" id="">
-                    <option value="sp">SP</option>
-                    <option value="rj">RJ</option>
-                    <option value="mg">MG</option>
+                    <option value="SP">SP</option>
+                    <option value="RJ">RJ</option>
+                    <option value="MG">MG</option>
                 </select>
             </div>
             <div>
