--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div>
         <h3>Alunos:</h3>
-        <button><a href="page cliente/CadastrarCliente.html">Cadastro de Alunos</a></button><br>
+        <button><a href="page cliente/CadastrarCliente.php">Cadastro de Alunos</a></button><br>
         <button><a href="page cliente/ListarCliente.php">Ver Lista de Alunos</a></button><br>
     </div>
 </body>
